Changes with melon 2.3.3                                          19 May 2022
    *) Added more path hook
    *) Added log hook
    *) Fixed JSON bug
    *) Fixed file name bug in melang error tips
    *) Added string trim, upper, lower and join
    *) Updated docs

Changes with melon 2.3.2                                          29 Apr 2022
    *) Fixed warnings on gcc 11.x and mingw
    *) Added path hook
    *) Added log hook
    *) Updated docs

Changes with melon 2.3.1                                          18 Apr 2022
    *) Fixed warning on Win32
    *) Fixed fib-heap bug
    *) Updated docs

Changes with melon 2.3.0                                          14 Apr 2022
    *) Fixed json bugs
    *) Fixed melang msgqueue bugs
    *) Fixed cron bugs
    *) Fixed melang exec bug
    *) Fixed melang GC bug
    *) Fixed event bug
    *) Fixed dup warning
    *) Optimized string slice
    *) Updated for win32
    *) Updated naming convention
    *) Updated melang function call syntax
    *) Added dynamic library import to melang
    *) Updated red-black tree release order
    *) Fixed file descriptor leak in melang
    *) Optimized melang co-routine memory overhead
    *) Optimized memory pool
    *) Optimized multi-thread mode
    *) Optimized IPC handler register
    *) Updated docs

Changes with melon 2.2.2                                          14 Aug 2021
    *) Add array diff and key diff in melang
    *) Add shell command execution function in melang

Changes with melon 2.2.1                                          11 Aug 2021
    *) Update and add some time functions
    *) Add cron format expression parser
    *) Add functions for operating time, cron and directory in melang

Changes with melon 2.2.0                                          14 May 2021
    *) Fix bugs
    *) Add Github Pages docs
    *) Add operator overloading in melang
    *) Add closure in melang

Changes with melon 2.1.0                                          02 Feb 2021