@@ -577,7 +577,7 @@ SCOPE int PREFIX_NAME##_preprocess(struct PREFIX_NAME##_preprocess_attr *attr)\
     mln_string_t tmp;\
     mln_production_t *prod = attr->prod_tbl;\
     mln_production_t *prodend = attr->prod_tbl + attr->nr_prod;\
-    if ((pool = mln_alloc_init()) == NULL) {\
+    if ((pool = mln_alloc_init(NULL)) == NULL) {\
         mln_log(error, "No memory.\n");\
         goto err2;\
     }\
