@@ -28,7 +28,7 @@ mln_fileset_t *mln_fileset_init(mln_size_t max_file)
         return NULL;
     }
 
-    fs->pool = mln_alloc_init();
+    fs->pool = mln_alloc_init(NULL);
     if (fs->pool == NULL) {
         free(fs);
         return NULL;
